--- a/override/forums/style/frontoffice.css
+++ b/override/forums/style/frontoffice.css
@@ -7,6 +7,7 @@
 	border: 1px solid #e4e2da;
 	-moz-border-radius: 10px;
 	-webkit-border-radius: 10px;
+	border-radius: 10px;
 	margin-bottom: 12px;
 }
 .modules-forums ul.message-list li.odd{
@@ -38,6 +39,7 @@
 	margin-bottom: 16px;
 	-moz-border-radius: 10px;
 	-webkit-border-radius: 10px;
+	border-radius: 10px;
 }
 .modules-forums .forum-number{
 	color: #E6E4DC;
@@ -74,8 +76,10 @@
 	background: #e8e7df;
 	-moz-border-radius-bottomleft: 10px;
 	-webkit-border-bottom-left-radius: 10px;
+	 border-bottom-left-radius: 10px;
 	-moz-border-radius-bottomright: 10px;
 	-webkit-border-bottom-right-radius: 10px;
+	border-bottom-right-radius: 10px;
 	font-size: 0.86em;
 	border-top: 1px solid #d5d3cc;
 	color: #666;
@@ -93,14 +97,17 @@
 .modules-forums ul.message-list li.first.tbv{
 	-moz-border-radius-topleft: 10px;
 	-webkit-border-top-left-radius: 10px;
+	border-top-left-radius: 10px;
 	-moz-border-radius-topright: 10px;
 	-webkit-border-top-right-radius: 10px;
 }
 .modules-forums ul.message-list li.last.tbv{
 	-moz-border-radius-bottomleft: 10px;
 	-webkit-border-bottom-left-radius: 10px;
+	border-bottom-left-radius: 10px;
 	-moz-border-radius-bottomright: 10x;
 	-webkit-border-bottom-right-radius: 10px;
+	border-bottom-right-radiuss: 10px;
 }
 .modules-forums ul.inline-menu{
 	margin-bottom: 16px;
@@ -125,8 +132,10 @@
 	color: #333;
 	-moz-border-radius-topleft: 10px;
 	-webkit-border-top-left-radius: 10px;
+	border-top-left-radius: 10px;
 	-moz-border-radius-topright: 10px;
 	-webkit-border-top-right-radius: 10px;
+	border-top-right-radius: 10px;
 }
 .modules-forums .message-header a.link{
 	color: #666;
@@ -150,6 +159,7 @@
 {
 	border: 1px solid #e4e2da;
 	-moz-border-radius: 10px;
+	border-radius: 10px;
 	-webkit-border-radius: 10px;
 	margin-bottom: 12px;
 }
@@ -161,8 +171,10 @@
 	padding: 5px;
 	-moz-border-radius-bottomleft: 10px;
 	-webkit-border-bottom-left-radius: 10px;
+	border-bottom-left-radius: 10px;
 	-moz-border-radius-bottomright: 10px;
 	-webkit-border-bottom-right-radius: 10px;
+	border-bottom-right-radius: 10px;
 }
 .modules-forums .post-form .errors
 {
@@ -172,8 +184,10 @@
 	padding: 5px;
 	-moz-border-radius-topleft: 10px;
 	-webkit-border-top-left-radius: 10px;
+	border-top-left-radius: 10px;
 	-moz-border-radius-topright: 10px;
 	-webkit-border-top-right-radius: 10px;
+	border-top-right-radius: 10px;
 }
 .modules-forums .thread-list th
 {
